Fix the z-index of the asset browser category picker

--- a/app/assets/stylesheets/islay/admin/dialogs.css.sass
+++ b/app/assets/stylesheets/islay/admin/dialogs.css.sass
@@ -96,6 +96,7 @@
         position: absolute
         left: -0.1em
         top: 1.95em
+        z-index: 2
 
       li
         cursor: pointer
